@ Physical/Special Split
@ No poison overworld damage
@ added fairy type and changed pokemons and moves acordily
@ Mary gives the polkadot bow after the radio tower event
@ fixed all know battle engine, engine and grafical bugs except "You can fish on top of NPCs" because it's funny and inconsequential
@ fixed all know audio, text, scripted events and internal engine routines
@ fixed that stupid tree animation frame script to be sensible instead of : return odd if 1, return even if 2 , return odd if 3..
@ removed ai 25% chance to miss status moves
@ removed badge stat boost and type boost
@ boost exp gain if at least 200 friendship
@ sandstorm now boost rock type pokemon special defense by 50%
@ light orb also boost raichu special attack
  replaced frozen status with frostbite from Pokemon Legends Arceus
@ lowered required friendship for evo to 200
@ changed item ratios to be 50% holding first item and 10% holding second item(60% chance of holding a item overall)
  trainer pokemons have max friendship
@ lowercase pokemon names
@ fixed the Leaders heads in the trainer card
@ added third trainer card page for kanto badges
@ berry trees give 3 to 5 berries
@ kurt instantly makes acorn pokeballs
  reworked remach system for better by removing the remach requirement for the battles and always trying to give the trainer phone number to the player
@ reworked initialization system
@ reworked swarm system
@ reworked beat up
  allow more trainer parties, with individual DVs, stat experience, nicknames, variable teams, etc
  added a lot of tms and distributed them acordly
  overworld actions no longer need hm on pokemon, but instead they just need a special item and some special confition(a "flying" mon for fly and so on)
@ no more trade evolutions, all are changed to something else but no "evolve at level x"
@ move dependent evolution, some pokemon need to learn certain moves to evolve
@ held item depent evolution, some pokemon need to hold certain items to evolve